Created basic functions. Added all mathematical operations. Abstracted terms.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 *.1
+Interpreter.bak
+compiled/drracket/errortrace/lex_rkt.dep
+compiled/drracket/errortrace/lex_rkt.zo
+compiled/drracket/errortrace/simpleParser_rkt.dep
+compiled/drracket/errortrace/simpleParser_rkt.zo
+Test1.txt
