Modify state to have layers added empty layer to state Modified state-names to top-names Modified state-values to top-values

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ compiled/drracket/errortrace/lex_rkt.zo
 compiled/drracket/errortrace/simpleParser_rkt.dep
 compiled/drracket/errortrace/simpleParser_rkt.zo
 Test1.txt
+test.txt
