--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ compiled/drracket/errortrace/simpleParser_rkt.dep
 compiled/drracket/errortrace/simpleParser_rkt.zo
 Test1.txt
 test.txt
+Interpreter.3
